# vast-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  conftest.py  mass_self_test.py  mkdocs.yml  pyproject.toml  requirements.txt  search.json  set_verify_status.py  ssh_diagnose.py  vast.py  vast.py.save  vast_config.py  vast_machine_tester.py  vast_pdf.py  vastai_sdk.py
.github/: CODEOWNERS
.github/workflows/: auto-generate-docs.yml  ci.yml  docs.yml  installer-ci.yml  os-smoketest.yml  pytest.yml  python-publish.yml  release.yml  test-python-publish.yml  update-docs.yml  vast-sdk-testing.yml  verify-docs.yml  windows-smoke.yml
.hypothesis/constants/: 67b0a8ccf18bf5d2  d9437551f75cef75
docs/: index.md  install-design.md  installation.md  installer-os-matrix-gating.md  releasing.md  single-source-of-truth.md  verify-cli-sdk-docs.md
docs/cli/: commands.md  examples.md  index.md
docs/cli/client/: autoscaling.md  billing.md  index.md  instances.md  keys.md  search.md  ssh.md  teams.md  volumes.md
docs/cli/host/: clusters.md  index.md  machines.md  (+2 more)
docs/guides/: migration.md
docs/sdk/: index.md  quickstart.md
docs/serverless/: index.md
docs/workflows/: verify-docs-on-docs-pr.yml
examples/client/: comfy_sine_load.py
examples/websocket/: README.md  client.py  onstart.sh  server.py  worker.py
openapi/: README.md  combine_api_yamls.py  readme.md
openapi/tests/: __init__.py  attach_ssh.py  base.py  cancel_copy.py  cancel_maint.py  cancel_sync.py  change_bid.py  cleanup_machine.py  cloud_copy.py  copy.py  create_api_key.py  create_autogroup.py  create_endpoint.py  create_env_var.py  create_instance.py  create_ssh_key.py  create_subaccount.py  create_team.py  create_team_role.py  create_template.py  delete_api_key.py  delete_autogroup.py  delete_endpoint.py  delete_env_var.py  delete_ssh_key.py  destroy_instance.py  destroy_team.py  detach_ssh.py  execute.py  invite_team_member.py  label_instance.py  launch_instance.py  list_machine.py  logs.py  prepay_instance.py  reboot_instance.py  recycle_instance.py  remove_defjob.py  remove_team_member.py  remove_team_role.py  (+40 more)
openapi/yaml/: add_network_disk.yaml  attach_ssh.yaml  cancel_copy.yaml  cancel_maint.yaml  cancel_sync.yaml  change_bid.yaml  cleanup_machine.yaml  cloud_copy.yaml  combined_api.yaml  copy.yaml  create_api_key.yaml  create_autogroup.yaml  create_endpoint.yaml  create_env_var.yaml  create_instance.yaml  create_network_volume.yaml  create_ssh_key.yaml  create_subaccount.yaml  create_team.yaml  create_team_role.yaml  create_template.yaml  delete_api_key.yaml  delete_autogroup.yaml  delete_endpoint.yaml  delete_env_var.yaml  delete_ssh_key.yaml  delete_template.yaml  delete_volume.yaml  destroy_instance.yaml  destroy_team.yaml  detach_ssh.yaml  edit_template.yaml  execute.yaml  get_autogroup_logs.yaml  get_autogroup_workers.yaml  get_endpoint_logs.yaml  get_endpoint_workers.yaml  instance_management.yaml  invite_team_member.yaml  label_instance.yaml  (+60 more)
scripts/: dev-install.sh  generate_cli_docs.py  generate_cli_sdk_docs.py  generate_detailed_cli_docs.py  install.sh  make_command_docs.py  make_manifest.py  mkdocs_hooks.py  patch_docs_nav.py  publish_release.py  start_server.sh  verify_cli_sdk_docs.py
scripts/data/: api_scopes.json
scripts/tests/: test-install-matrix.sh
sdk-wrapper/: README.md  pyproject.toml
tests/: compat_test.sh  conftest.py  pyproject.toml  test_dependency_budget.py  test_simple.py
tests/api/: test_client.py  test_price_increase.py  test_query.py
tests/cli/: test_auth_commands.py  test_benchmark_commands.py  test_benchmarks_commands.py  test_benchmarks_gpu_catalog.py  test_billing_commands.py  test_dependency_budget.py  test_deployments_commands.py  test_instances_commands.py  test_keys_commands.py  test_legacy_vast_self_test.py  test_machines_commands.py  test_main_error_handling.py  test_offers_commands.py  test_parser.py  test_port_range.py  test_price_increase_commands.py  test_runtime_diagnostics.py  test_self_test_support_bundle.py  test_teams_commands.py  test_uninstall_command.py  test_update_command.py  test_util.py
tests/installer/: footprint_baseline.env  run_tests.sh
tests/regression/: test_bare_except.py  test_direct_requests.py  test_hardcoded_raw.py  test_http_exception.py  test_json_decode.py  test_main_error_handling.py  test_main_raw_output.py  test_mutable_defaults.py  test_namespace_typo.py  test_parse_query.py  test_raw_completeness.py  test_raw_errors.py  test_retry.py  test_return_response.py  test_safe_dict_access.py  test_sdk_exception_handling.py  test_sdk_integration.py  test_sdk_naming_and_async.py  test_sdk_timezone_import.py  test_sdk_wrapper_safety.py  test_serverless_lazy_import.py  test_shell_injection.py  test_show_instances.py  test_show_machine.py  test_timeout.py  test_timezone_handling.py  test_unreachable_code.py  test_utc_display.py  test_utcfromtimestamp.py
tests/sdk/: test_sdk.py  test_sync_client.py
tests/serverless/: test_client_serverless.py  test_healthcheck_readiness.py  test_remote_workload_calculator.py  test_worker_config.py
tests/smoke/: __init__.py  test_cli_commands.py  test_standalone.py
tests/unit/: __init__.py  test_http_helpers.py  test_query_parser.py  test_serverless_client.py  test_serverless_connection.py  test_serverless_data_types.py  test_serverless_endpoint.py  test_serverless_metrics.py  test_serverless_worker_config.py  test_timezone.py  test_vastai_base.py
utils/: config.py  pypi_api.py  version_check.py  version_checker.py
vastai/: SKILL.md  __init__.py  __main__.py  _base.py  sdk.py  utils.py  vastai_base.py  vastai_sdk.py
vastai/api/: auth.py  billing.py  client.py  deployments.py  endpoints.py  instances.py  keys.py  metrics.py  offers.py  price_increase.py  query.py  teams.py
vastai/async_/: client.py
vastai/cli/: display.py  main.py  parser.py  selfupdate.py  util.py  utils.py
vastai/data/: instance.py  query.py
vastai/pdf/: vast_pdf.py  watcher.sh
vastai/serverless/: README.md
vastai/sync/: client.py
vastai_sdk/: SKILL.md  __init__.py
(+39 files in other folders)
