[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "vastai"
authors = [
  { name = "jake cannell", email = "jake@vast.ai" },
  { name = "chris mckenzie", email = "chris@vast.ai" },
  { name = "anthony benjamin", email = "anthony@vast.ai" },
  { name = "liam weldon", email = "liam@vast.ai" },
  { name = "edgar lin", email = "edgar@vast.ai" },
  { name = "nader arbabian", email = "nader@vast.ai" },
  { name = "marco hernandez", email = "marco@vast.ai" },
  { name = "karthik pillalamarri", email = "karthik@vast.ai" },
  { name = "sammy javed", email = "sammy@vast.ai" },
  { name = "rob ballantyne", email = "rob@vast.ai" },
]
readme = "README.md"
requires-python = ">3.9.1, <4.0"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
  "xdg",
  "argcomplete==3.5.1",
  "requests (>=2.32.4)",
  "borb (==2.1.25)",
  "python-dateutil==2.6.1",
  "pytz",
  "urllib3>=2.6.3",
  "poetry-dynamic-versioning (>=1.8.1,<2.0.0)",
  "gitpython (>=3.1.44,<4.0.0)",
  "toml (>=0.10.2,<0.11.0)",
  "curlify (>=2.2.1,<3.0.0)",
  "setuptools",
  "cryptography (>=44.0.2,<45.0.0)",
  "rich",
  "fonttools>=4.60.2",
  "qrcode",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "mypy>=1.14",
  "types-requests>=2.32",
  "types-python-dateutil>=2.9",
  "ruff>=0.9",
  "pre-commit>=4.0",
]

[tool.poetry]
packages = [{ include = "utils" }, { include = "vast.py" }, { include = "vast_config.py" }]
version = "0.0.0"

[project.scripts]
vastai = "vast:main"

[project.urls]
homepage = "https://cloud.vast.ai/"
repository = "https://github.com/vast-ai/vast-cli/"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
fix-shallow-repository = true
style = "semver"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["*/tests/*", "*/.venv/*", "*/site-packages/*"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", ".venv", "__pycache__", "build", "dist", ".eggs", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"vast.py" = ["T20", "A001", "A002", "E501", "B006", "F401", "F523", "F541", "F811", "F841", "E701", "E703", "E711", "E713", "E721", "E741"]
"vast_pdf.py" = ["T20", "E501"]
"tests/**/*.py" = ["F401", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["vast"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
